<resources>
    <string name="app_name">DistanceTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_text">Continue</string>
    <string name="permission_description">Welcome to Distance Tracker. In order to use our application
    we will first need to request location permission from you. Otherwise we will not be able to
    provide you with our service. If you agree and wish to continue tap on the button below</string>
    <string name="permission_required">Permission Required</string>
    <string name="reset">Reset</string>
    <string name="stop">STOP</string>
    <string name="start">Start</string>
    <string name="go_text">GO</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="share">Share</string>
    <string name="distance_value">%1$s km</string>
</resources>